--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^17.3.0",
     "@auth0/angular-jwt": "^5.2.0",
     "keycloak-js": "^24.0.4",
+    "lodash": "^4.17.21",
     "ng-openapi-gen": "^0.51.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
