--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,12 @@
               "src/styles.scss",
               "src/custom.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src"
+              ]
+            }
           },
           "configurations": {
             "production": {
